starting with Ademico testing

--- a/Mario2026/App.config
+++ b/Mario2026/App.config
@@ -7,17 +7,29 @@
     </configSections>
     <userSettings>
         <Mario2026.Properties.Settings>
-            <setting name="MarioTop" serializeAs="String">
+            <setting name="MarioMainFormTop" serializeAs="String">
                 <value>0</value>
             </setting>
-            <setting name="MarioLeft" serializeAs="String">
+            <setting name="MarioMainFormLeft" serializeAs="String">
                 <value>0</value>
             </setting>
-            <setting name="MarioWidth" serializeAs="String">
+            <setting name="MarioMainFormWidth" serializeAs="String">
                 <value>0</value>
             </setting>
-            <setting name="MarioHeight" serializeAs="String">
+            <setting name="MarioMainFormHeight" serializeAs="String">
                 <value>0</value>
+            </setting>
+            <setting name="AdemicoUrl" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="AdemicoAccessToken" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="AdemicoUsername" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="AdemicoPassword" serializeAs="String">
+                <value />
             </setting>
         </Mario2026.Properties.Settings>
     </userSettings>
