--- a/Mario2026/Properties/Settings.settings
+++ b/Mario2026/Properties/Settings.settings
@@ -2,17 +2,29 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Mario2026.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="MarioTop" Type="System.Int32" Scope="User">
+    <Setting Name="MarioMainFormTop" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
-    <Setting Name="MarioLeft" Type="System.Int32" Scope="User">
+    <Setting Name="MarioMainFormLeft" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
-    <Setting Name="MarioWidth" Type="System.Int32" Scope="User">
+    <Setting Name="MarioMainFormWidth" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
-    <Setting Name="MarioHeight" Type="System.Int32" Scope="User">
+    <Setting Name="MarioMainFormHeight" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="AdemicoUrl" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="AdemicoAccessToken" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="AdemicoUsername" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="AdemicoPassword" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
     </Setting>
   </Settings>
 </SettingsFile>
