using newtonjson cleanup lookuptools and testing registrations

--- a/Mario2026/Mario2026.csproj
+++ b/Mario2026/Mario2026.csproj
@@ -48,4 +48,8 @@
     <Folder Include="Vpe\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
 </Project>
