starting userclient settings

--- a/Mario2026/App.config
+++ b/Mario2026/App.config
@@ -19,16 +19,13 @@
             <setting name="MarioMainFormHeight" serializeAs="String">
                 <value>0</value>
             </setting>
-            <setting name="AdemicoUrl" serializeAs="String">
-                <value />
+            <setting name="isUpgraded" serializeAs="String">
+                <value>False</value>
             </setting>
-            <setting name="AdemicoAccessToken" serializeAs="String">
-                <value />
+            <setting name="IsAdmin" serializeAs="String">
+                <value>False</value>
             </setting>
-            <setting name="AdemicoUsername" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="AdemicoPassword" serializeAs="String">
+            <setting name="ClientKbo" serializeAs="String">
                 <value />
             </setting>
         </Mario2026.Properties.Settings>
