--- a/Mario2026/Mario2026.csproj
+++ b/Mario2026/Mario2026.csproj
@@ -9,9 +9,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Reference Include="ADODB">
-      <HintPath>..\..\..\..\..\..\..\..\Program Files\Microsoft Visual Studio\2022\Community\Common7\IDE\PublicAssemblies\adodb.dll</HintPath>
-    </Reference>
     <Reference Include="IDEALSoftware.VpeCommunity">
       <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\VPE_C32.740\deploy\IDEALSoftware.VpeCommunity.dll</HintPath>
     </Reference>
@@ -50,6 +47,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="System.Data.OleDb" Version="9.0.8" />
   </ItemGroup>
 
 </Project>
